# compiled-nn-rs

./: .gitmodules  Cargo.toml
compiled-nn-bindings/: CMakeLists.txt  Cargo.toml  Thinterface.cpp  Thinterface.h  build.rs  wrapper.h
compiled-nn-bindings/src/: lib.rs
src/: compiled_nn.rs  lib.rs
