[package]
description = "A JIT Compiler for Neural Network Inference"
edition = "2021"
exclude = ["/hdf5/hl", "/hdf5/tools", "/hdf5/tools"]
homepage = "https://github.com/HULKs/CompiledNN"
license = "MIT"
name = "compiled-nn-bindings"
version = "0.2.0"

[build-dependencies]
bindgen = "0.59.2"
walkdir = "2.3.2"
