[package]
description = "A JIT Compiler for Neural Network Inference"
edition = "2018"
exclude = ["/hdf5/hl", "/hdf5/tools", "/hdf5/tools"]
homepage = "https://github.com/HULKs/CompiledNN"
license = "MIT"
name = "compiled-nn-bindings"
version = "0.5.0"

[build-dependencies]
bindgen = "0.59.2"
cmake = "0.1.48"
glob = "0.3.0"
walkdir = "2.3.2"
