[package]
description = "A JIT Compiler for Neural Network Inference"
edition = "2018"
exclude = [
  "/CompiledNN/hdf5/c++",
  "/CompiledNN/hdf5/doxygen",
  "/CompiledNN/hdf5/examples",
  "/CompiledNN/hdf5/fortran",
  "/CompiledNN/hdf5/hl",
  "/CompiledNN/hdf5/java",
  "/CompiledNN/hdf5/release_docs",
  "/CompiledNN/hdf5/tests",
  "/CompiledNN/hdf5/testpar",
  "/CompiledNN/hdf5/tools",
  "/CompiledNN/hdf5/utils",
]
homepage = "https://github.com/HULKs/CompiledNN"
license = "MIT"
name = "compiled-nn-bindings"
version = "0.6.0"

[build-dependencies]
bindgen = "0.59.2"
cmake = "0.1.48"
glob = "0.3.0"
walkdir = "2.3.2"
